Fixed overlapping css rules

--- a/src/frontend/css/RecipeCard.css
+++ b/src/frontend/css/RecipeCard.css
@@ -1,11 +1,12 @@
-.recipeContainer {
+.recipeHomeContainer {
     display: flex;
     justify-content: center;
     margin-top: 3em;
+    width: 100%;
 }
 
 .recipeGrid {
-    width: 95%;
+    width: 100%;
     column-width: 300px;
     column-gap: 15px;
 }
@@ -57,14 +58,13 @@
     border-radius: 50%;
     font-size: 1.5em;
     color: var(--white);
-    -webkit-text-stroke: 2px rgba(0, 0, 0, 0.2);
+    -webkit-text-stroke: 1px var(--lightgray);
     background-color: var(--white);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .recipeCardTop .material-icons:hover {
-    background-color: var(--gray);
-    -webkit-text-stroke: 0px;
+    background-color: var(--lightgray);
     color: var(--white);
     cursor: pointer;
 }
